FINAL - added CSS styling

--- a/application-form.html
+++ b/application-form.html
@@ -1,32 +1,35 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Skills-HTML-CSS</title>
-        <link rel="stylesheet" href="./styles.css">
-    </head>
-    <body>
-
-    	<h1>Now Hiring!</h1>
-
-    	<p>Baloonicorn Engineering Co. is currently looking to hire top talent within several of its engineering divisions. Do you think you have what it takes to become part of the dynamic, ever-growing Baloonicorn family? <span class="emphasis">APPLY TODAY</span>!</p>
-    	<br>
-    
-    <form>
-    	<form action="/application" method="POST">
-	    	<label><h3>Application Form:</h3> 		
-	    		First Name: <input type="text" name="first-name">
-	    		<span class="emphasis">Last Name: </span><input type="text" name="last-name">
-	    		Salary Requirement: <input type="text" name="salary">
-	    		Job Choice: <select name="job_choice">
-	    			<option value="software-engineer">Software Engineer</option>
-	    			<option value="qa-engineer">QA Engineer</option>
-	    			<option value="Product Manager">Product Manager</option>
-	    		</select> 
-	    	</label>
-	    	<br>
-	    <br><input type="submit">
+<head>
+  <meta charset="UTF-8">
+  <title>Skills-HTML-CSS</title>
+  <link rel="stylesheet" href="./styles.css">
+</head>
+<body>
+  <header>
+    Balloonicorn Engineering Co.
+    <img src ="http://orig08.deviantart.net/4825/f/2014/117/7/e/balloonicorn_suit_by_peeka13-d7ga4ho.png" id="logo">
+  </header>
+  <h1>Now Hiring!</h1>
+  <p>
+    <span id="company-name" class="emphasis">Balloonicorn Engineering Co.</span> is currently looking to hire top talent within several of its engineering divisions. Do you think you have what it takes to become part of the dynamic, ever-growing <span id="company-name">Balloonicorn</span> family? <span class="emphasis">APPLY TODAY</span>! 
+  </p>
+  <br>
+    <form action="/application" method="POST">
+      <label><h3>Application Form:</h3> 		
+        First Name: <input type="text" name="first-name">
+        <span class="emphasis">Last Name: </span><input type="text" name="last-name">
+        Salary Requirement: <input type="text" name="salary">
+        Job Choice: <select name="job_choice">
+        <option value="software-engineer">Software Engineer</option>
+        <option value="qa-engineer">QA Engineer</option>
+        <option value="Product Manager">Product Manager</option>
+        </select> 
+        <br>
+          <br><input type="submit"></br>
+        </br>
+      </label>
     </form>
-
-    </body>
+</br>
+</body>
 </html>
